test/spec_vectors/global/ok/module_4.wat
(module (global (export "a") (mut f32) (f32.const 0)))