test/spec_vectors/global/fail/module_30.wat
(module (global i32 (i32.const 0)) (func (result i32) (global.get 1)))